expected/main/lc/large-literals32.err
ERROR: "actual/main/lc/large-literals32.llc", line 3
  const16G = 16G  :: Word   
             ^
Literal is too large (limit is 4294967295)

ERROR: "actual/main/lc/large-literals32.llc", line 3
  const16G = 16G  :: Word   
                  ^
Trailing token(s) ("::") at end of input

ERROR: Aborting after 2 previously reported errors

